# rs-reals2arrow

./: Cargo.toml  README.md  doc-web.sh
examples/reals2arrow/: Cargo.toml  reals2arrow  run.sh
examples/reals2arrow/src/: main.rs
src/: lib.rs  sync.rs
src/sync/: fs.rs
