[package]
name = "rs-reals2arrow"
version = "0.1.0"
edition = "2024"

description = "Converts the float values to an Arrow array."
license = "Apache-2.0"
repository = "https://github.com/takanoriyanagitani/rs-reals2arrow"
homepage = "https://github.com/takanoriyanagitani/rs-reals2arrow"
documentation = "https://docs.rs/rs-reals2arrow/latest"
keywords = ["arrow", "binary-file-conversion", "array"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"
expect_used = "forbid"

[dependencies.arrow]
version = "56"
default-features = false
features = [
]

[dependencies.half]
version = "2"
default-features = false
features = [
	"std",
]

[features]
default = [
	"sync",
	"fs",
]

sync = [
]

fs = [
]
